# midi_writer_cpp

./: .clang-format  .gitignore  Makefile  README.md  build_all.sh  build_so.sh  clean_all.sh  main.cpp  make.sh  make_clean.sh  midi_writer  midi_writer.cpp  midi_writer.h  out.txt  requirements.txt  run_tests.sh  setup_venv.sh  tests.cpp  tests.h
api/: midi_c_api.cpp  midi_c_api.h
bindings/c_binding/: Makefile  midi_c_api.cpp  midi_c_api.h  test_ctypes.py
bindings/ctypes_binding/include/: midi_c_api.h
bindings/ctypes_binding/src/: midi_c_api.cpp
bindings/python_binding/: CMakeLists.txt  midi_pybind.cpp  test_midi.py
clang_scripts/: make_allman.sh  make_kr.sh
include/: event.h  midi_writer.h  tests.h  track.h
python_usage/: main.py  midi_test.py  midi_writer.py  py_test.py  run_test.sh
src/: main.cpp  midi_writer.cpp  tests.cpp  track.cpp
